--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           --health-retries 5
     steps:
       - name: checkout
-        uses: actions/checkout
+        uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip wheel
